// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "170b8008f53312",
  "0c1dc4c931d1c1",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "0ce488d40ca43a",
  "05132ab7403468",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "155e8c3db4d986",
  "0a1b0f4bd8f20d",
  "02a776517f7993",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "0d295f8cde502e",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "01bf99e87db859",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "193b164639ff17",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "0535ec030bcd20",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "0770d4b3998fcc",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "1488ef13c2ba05",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "076572e8a6469d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "06fc74351c4400",
  "0f16afb3799454",
  "11738969c907ca",
  "1b8f37f2a9093b",
  "1e68f3ba53f571",
  "0485c50b93f58a",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "0ab6dad976f4d6",
  "1703c21c77e591",
  "1bfae6003d0120",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1e07425e0ceca5",
  "03adb629b9f6a2",
  "0801a3166655dd",
  "1469df7798eb23",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "127831c33e9870",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "0e2eb4f1bf33c0",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "042cb9e8865bd4",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1062c7227643cb",
  "1e1b9a02c20fb9",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "17289c66a62109",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "150482ee07be66",
  "0c2536c1434f80",
  "19198c737937c2",
  "1f76c94b1d47bb",
  "06c519926b92bd",
  "11d2c8fb928a4a",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1e4ca9d8b19100",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "025dc26c5fcfdc",
  "0807bbec8a25b9",
  "1b1961c4577aad",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "0526c3e248c604",
  "00f9fa180e3660",
  "05404ea99a8c96",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "011e3784b6244b",
  "05650d09c80472",
  "09bb7b6b44a6f4",
  "1d54a658a6c9dc",
  "13a4596cefe1b0",
  "1de48df85fb3e9",
  "024d4ea446736f",
  "15e086a63ac0a6",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "001622b87364f7",
  "0454ec37cb69b5",
  "0e3b7df8db6da7",
  "1609195dbf320a",
  "1b089453084835",
  "19d409d40da594",
  "02717ab0a86321",
  "132f41736829c8",
  "0bde8979ee2f85",
  "12da942897714e",
  "1ce93ec9cd9d3d",
  "0a6cd1bafcf66c",
  "1a2f3d1d2832a5",
  "1ea7fa71f7f897",
  "1d0e7194e178ea",
  "157c53371bed28",
  "1fe2c4a83e8893",
  "04867d04e87cd1",
  "06fa1554d1b136",
  "12d872e2023618",
  "12cd73274b3c59",
  "1c0c003bf07f13",
  "10746ca67a47fb",
  "0a0b303d49bd69",
  "13ae7795edc2b8",
  "0066209dac1245",
  "0601462a3b59bc",
  "01f4fa00718c4d",
  "1ddd46ed7ca87a",
  "028505396a3830",
  "0b104211259da9",
  "01ff385cee5d14",
  "098bebd15f4c16",
  "0ab92f6f94f795",
  "02f1ee53c58237",
  "1d51c8401635a4",
  "10506717147790",
  "0b9fb0596b9c15",
  "1a8bdf81015c5b",
  "1fc2d5f9757cf5",
  "152e8d77477d2f",
  "139200cccbf0c3",
  "04e0636d5d2c0a",
  "13bd5ee554f21f",
  "02cacde3909378",
  "13fa413c0a0c53",
  "06f80d0e2584a3",
  "18c7c2b295f8d4",
  "138fe310ec173d",
  "0e8aec3090851d",
  "1d464ff13e4749",
  "070bab9f41a149",
  "052b2e3f1d7d89",
  "032b67c6704e85",
  "03f24e53364473",
  "185106d77f4635",
  "192b0109766691",
  "056569626d91d8",
  "15fb8cd1d28270",
  "05b05a65c5c3bd",
  "18b2ebe111b0b0",
  "0832bc1891481e",
  "0159e25046112e",
  "0d7cf88751f812",
  "10aa8d3013c5c5",
  "0dbac1e1e5d00e",
  "07d4ce7218b5e3",
  "11b4a0fc67568d",
  "1afcf2ee62a617",
  "03c1201cf9d20b",
  "0c3d008e99e962",
  "02ab7904558b3c",
  "0107617689c753",
  "135fa96a86ec14",
  "04b2cd82667710",
  "0d80fd3b2bf08e",
  "156b9615f6de54",
  "16cc04a8827f32",
  "1df78f327d55c7",
  "0f950ea1836dd3",
  "0f3e17083daa06",
  "080c6a9b0c01bc",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "1e94425e6771c5",
  "1421d152456a3a",
  "0c42a5d000f468",
  "0458e5a1bb4790",
  "1fb1a94668bb22",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "00ab87e6bfd815",
  "0b3ef80297a3a1",
  "054a2bf467369e",
  "0e6b095c5c3bce",
  "06ddb3ce632e8b",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "1b06c10fd069cf",
  "08edcce0dd4385",
  "1cb340c1159e36",
  "00008b9482c8a4",
  "1f378209e83279",
  "1d6795a5e87a35",
  "08f1126df556d5",
  "0883dac6baf369",
  "13d92157763150",
  "0a06cf6d82c32c",
  "1975fe3f0e8b97",
  "0ec0a3b494bb84",
  "0d8e352132ef0b",
  "110662c650e9e3",
  "0b82f299464775",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "06c7895497a640",
  "1fc37e759e3a22",
  "01b92d270831fb",
  "14f404cf83bffc",
  "19d635afcf1064",
  "12021635a06afd",
  "0ebd01af21ce66",
  "16304b5a4a5162",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1e27e042552371",
  "0316d54d446aa8",
  "013e425454dd4c",
  "0f0a21393d6879",
  "1d24e4b25e2b05",
  "0f798ca95ae623",
  "18c5f156a6c9df",
  "06a41ec9efaa55",
  "0cc7d542decb6e",
  "1d6ec92562bac9",
  "00791f60245386",
  "1aeb1a24049840",
  "0d6e868c78c2f0",
  "0e2166d7f66b36",
  "0490327e13629c",
  "014b927ef11857",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "1ceccc98074671",
  "1769a2773c0003",
  "1422f160ecb2ad",
  "0e2ccf25b35e30",
  "1e8fcaa7a6910c",
  "040a4e4f024ead",
  "0ba009cf59ae9c",
  "0d8376b74a285a",
  "10d71f05e2a8cf",
  "1eeee4a748ebf4",
  "0f6da6475a9b00",
  "1280702bf87bde",
  "0ab7059d4eb0a0",
  "1d5fb51c55699a",
  "0e0256d26c9dfc",
  "0670c18661082c",
  "19765d799fd7aa",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "0b1e0457f48d4c",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "0960914e5bcb77",
  "1aaf411b421dab",
  "150898c71a1a97",
  "1c295617e904b9",
  "0ca5a4cb7c5bb4",
  "0ab0b4ef9e9766",
  "1af6153285bfe6",
  "19c94adc45f7b1",
  "0b5dab69178e0b",
  "1e89f743d9ac93",
  "168be1da18953d",
  "06dc1edff14c9c",
  "0f87b0ac210899",
  "100d2ea572ab5b",
  "051cb9dda50b97",
  "0b864790797f5f",
  "17fda2c672d06a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "170b8008f53312",
  "05650d09c80472",
  "16c7ef01b44f58",
  "0654a325ce10cc",
  "0bd5714f18016b",
  "0af1e7a22242ce",
  "024d4ea446736f",
  "00c4fbe3fb1ebf",
  "1c4e1deff875a4",
  "1fe6c973a4efb4",
  "162141e437de94",
  "0244c829bd10a9",
  "01809c2b9515e2",
  "16115904c7f919",
  "0cc4b8e853c93b",
  "1d8c8fa8cfab73",
  "19d409d40da594",
  "148b2c5c7d6820",
  "1873e5254e6a97",
  "0f5e70e4c3616f",
  "07a2ee6f249cf0",
  "1ce93ec9cd9d3d",
  "0a1b0f4bd8f20d",
  "1a2f3d1d2832a5",
  "02bc4a933d961b",
  "0f49ee06c616ac",
  "1bed4557d114a8",
  "001ba8e50f59dd",
  "194a2e71e70378",
  "06fa1554d1b136",
  "03920e0fedbee8",
  "01703de21c696d",
  "0fc254e6fdeb8f",
  "15792c64fce15f",
  "14f6ce8d314281",
  "13ae7795edc2b8",
  "04c2907f5e9218",
  "0601462a3b59bc",
  "05718000d347c5",
  "0d5409b01ad052",
  "1a7d34b72bca59",
  "1ba6487f9a7a2c",
  "1f3e659ac8ac58",
  "13397c33c037a1",
  "0ab92f6f94f795",
  "0e9dc50a08d676",
  "0d55ae9acbb4a3",
  "10506717147790",
  "02f8a831845d72",
  "1a8bdf81015c5b",
  "1b73d70b51779d",
  "152e8d77477d2f",
  "0cc1d1184a1dae",
  "04e0636d5d2c0a",
  "13d00237d6f26f",
  "1a57ec58235732",
  "04a5499db48768",
  "06f80d0e2584a3",
  "1d6ee7649438a0",
  "138fe310ec173d",
  "1edbc38412b669",
  "07349ed86d5e73",
  "00a2d647a84dad",
  "052b2e3f1d7d89",
  "05938001e3c8d4",
  "03f24e53364473",
  "10891a54b8069d",
  "071f7933f3e32b",
  "056569626d91d8",
  "1eb31bc64ebbf0",
  "0e91560f6f4424",
  "15aa7610e6cf0b",
  "17d1b98b596f45",
  "145148828b5e16",
  "141bb9cc00e548",
  "0a30e8e8651f6b",
  "1f5b17893f646c",
  "12bc1fcb5e6191",
  "11b4a0fc67568d",
  "0fcdc95aa9bd84",
  "0ac67cc2f5d91e",
  "0c3d008e99e962",
  "0a1dc8a1f9c2bc",
  "094f7b7be2a526",
  "09343c2c74b246",
  "00d11a0611e188",
  "1014c8ad737401",
  "08e47809c3bd1a",
  "169e292fa393dd",
  "0b11d7a71355eb",
  "07f1cbf07b2f2d",
  "0f3e17083daa06",
  "0f16afb3799454",
  "0e9e10c96bc1e9",
  "085b1a60301ea0",
  "157c427cb28ec8",
  "1e2b751144d6a3",
  "0ec0685d96c2d2",
  "1421d152456a3a",
  "1db233ba555e11",
  "15cdab26c21115",
  "1facedecbdb59f",
  "01842ff8b6213c",
  "06e8e5f4518ab1",
  "1703c21c77e591",
  "0b3ef80297a3a1",
  "19eb281c36a4ae",
  "0c90bed9da4f35",
  "19616e0c8366b1",
  "1106ca0fc3a6aa",
  "150709dc5ffc51",
  "0801a3166655dd",
  "19182f08e7d4c5",
  "08859f7e73dac4",
  "1a09d5b629f133",
  "0eb2e981082292",
  "0a01f2da9097fa",
  "1f378209e83279",
  "1c70bb3aa82e07",
  "18fd4a54245bed",
  "0883dac6baf369",
  "13878151562c9b",
  "0a06cf6d82c32c",
  "1e0470956f76ed",
  "060fc875b43279",
  "05144d354aecb7",
  "0b386f5ca7a90b",
  "112ba7e758cd16",
  "1d60e98e64cce7",
  "12caea8d959f38",
  "03dbf7be209bf9",
  "0b15bf2511df87",
  "174524a69127d3",
  "14f404cf83bffc",
  "01e3f3379e2c81",
  "12021635a06afd",
  "1ecf81383ad840",
  "0de7ccc129761d",
  "1429b8ba8a4fe9",
  "05e4770d9bb9ac",
  "056839e5bc5271",
  "1613db8560a78a",
  "0316d54d446aa8",
  "013e425454dd4c",
  "1ebf9fcba8516c",
  "04fc87bcaf9ae2",
  "0f798ca95ae623",
  "02be43e84e6980",
  "117b2fb806f8e0",
  "025e74aacfac29",
  "04ae8aaa104adb",
  "13896210accf98",
  "1357a6a65fc1b1",
  "0d3089b4f0e681",
  "0e2166d7f66b36",
  "0c2536c1434f80",
  "19198c737937c2",
  "1b3ae74c17b872",
  "045f642a855432",
  "020b17d96d0edb",
  "00b5a4baa61ae8",
  "0bca2d44810edb",
  "1422f160ecb2ad",
  "1c693992e04e99",
  "1e8fcaa7a6910c",
  "09e593d988e36c",
  "0ba009cf59ae9c",
  "12c73264adacc7",
  "19c757bc266904",
  "02a32c29aa40d8",
  "0f6da6475a9b00",
  "16f3554dab5f02",
  "198dd3c818e4a6",
  "07772d9e061cfa",
  "0337ecb57b98b1",
  "1f006300e023f5",
  "090dfd2b43d445",
  "04cc64c806454a",
  "0807bbec8a25b9",
  "0b3068369a9605",
  "1254d4b3e1774e",
  "0c6654e746cc3e",
  "0921de8d3bd587",
  "02f5487a4583fe",
  "0e47741b4cd9f2",
  "150898c71a1a97",
  "00f9fa180e3660",
  "0ca5a4cb7c5bb4",
  "0012591797a2f2",
  "1335d1d52a2b76",
  "0120b2dd32442a",
  "00e1143cf8381c",
  "0047e7eb00747d",
  "10eb058a2ea5e1",
  "0702834a8d25b7",
  "0f87b0ac210899",
  "06208e82222479",
  "0108c1a93d3889",
  "034a5b1b9626f5",
  "0dd50e22fcd572",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "1900183da1e098",
  "1a00416a2a718f",
  "088a3a65fd4b52",
  "0925c4b7dc6019",
  "04f48a9fbc595e",
  "0b4da3368b7b71",
  "1916fb8cd384a2",
  "184e930ca2ecff",
  "0d2227c73c9471",
  "00a72625f0eed9",
  "12b9bde2cb1194",
  "1ee9e4bba3eed5",
  "0b7b3e5b222c17",
  "0205fdb1482086",
  "0e7043a16e7e7b",
  "0b20675faf4708",
  "0c206f98f57e77",
  "0cb222972dc9f2",
  "1c8ab78a1d4f79",
  "0fe6abbd86e23d",
  "1b284c95eb04a0",
  "097435cdd9bd48",
  "1833f35926bc40",
  "05248973cef481",
  "1e611a4de31e9c",
  "09755f3e17454c",
  "0ae3779d3e36ae",
  "1f910b406b6674",
  "0263a414832d1c",
  "17c960431a475b",
  "067f21430f4a32",
  "191612c2b5ad7a",
  "0eee42380b45a4",
  "10f0defaa0552e",
  "0415e69ff06a9b",
  "1f5cc7c3f6a11d",
  "02cbdf74911fa0",
  "19810224bb7617",
  "122f731f9b0c43",
  "09106276d528c5",
  "1403021eec4b1e",
  "1f6293595f1a39",
  "0ec618ee803832",
  "1736eb19596386",
  "00373309af64fc",
  "08c4d549f5a215",
  "0879d75c512d69",
  "0a79dd82ab2067",
  "1e135c0d15bccd",
  "0313b787d54a0b",
  "1005f889bd1a79",
  "1897fa91ae085e",
  "0848f994b7de84",
  "005d3348ee60b2",
  "12534241d288dd",
  "1e321473c6237d",
  "1468c53bda3975",
  "0e7891ae51c6ae",
  "0c0fbd78c9dab9",
  "1d41d2d3c8f8fa",
  "002c96be6954d3",
  "0006b8b57dfa75",
  "0b8a74bd8ec768",
  "18db152647ba78",
  "1ba7c2928f5bdb",
  "0c18c88d824053",
  "1f9b5215ca12df",
  "10d8e7265a2bc8",
  "0f2cf133397f1a",
  "0e5ac6d6d91092",
  "1157e555dcbbb3",
  "1a7b2de569c8c6",
  "03e22c8e9f872d",
  "0874e7d92fe688",
  "0846dca8f85db5",
  "027b9adc4716f3",
  "0ccbe7a3b147d8",
  "07c3f42944b502",
  "174de3e6b28469",
  "18d869a54c365f",
  "035315cadc71cc",
  "17172b28763643",
  "11846c80a8f544",
  "149523e9a660a2",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "0c00cde10dbfdb",
  "12f90e0ca0ea30",
  "0331d3a8b0db13",
  "00e4fff803ffd9",
  "1d26151ce33b6c",
  "0d90fa84d2b6c6",
  "0efbef20db4661",
  "0777e1f24cc0a2",
  "1ff9e5289e0d7f",
  "1c1417e17a344f",
  "0c1872f2a7e86f",
  "07d84ee2fa4a04",
  "0ceef63f391459",
  "04c51f68e7414d",
  "171df7e8fbcce2",
  "130e927e6f8adb",
  "12c2b34a46e919",
  "03cccfb4b3c600",
  "066df2c6490c06",
  "02333c251da559",
  "0724f54e124525",
  "1f0b59530e2a28",
  "1ff2673ffae893",
  "19b0574c570fed",
  "0a2b902d73dd74",
  "19cded039c6ead",
  "0b0f5c748a69d5",
  "001c65323dc99c",
  "1961de3476c5e3",
  "0f762c50544016",
  "180c817842b634",
  "1fbf783a21c323",
  "164f343454f99a",
  "07c73f21440df0",
  "003badfba971e6",
  "00240a3dea2744",
  "18af1c74eb4ff5",
  "1eb99fe373229b",
  "14abd9ecfdcc0f",
  "04ca3b471d10b2",
  "063512f1dd4f92",
  "1316c8e405401c",
  "1fdcb931f733b6",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "1ffc9e5d9dbbb5",
  "1b491999682887",
  "196f06e933ad95",
  "06e1492ed6b3fc",
  "132f5df2ccc46d",
  "11054ba9451520",
  "0e0b58c8bf95b2",
  "0ee4ee04dbc1a6",
  "0562d08e9d6e3e",
  "071cba54977c49",
  "12832f857acc42",
  "08b4a72c892e33",
  "115d05ce78426a",
  "1e9db321bf4431",
  "088b063c01ec18",
  "0173cd2313a5d3",
  "0c17d63ec14e34",
  "1877c6b8c5b32f",
  "0f8f8a96cb3c84",
  "1ca7a5a2c8b41e",
  "045c65874a6890",
  "0e0b4e74d7283a",
  "051001066193b1",
  "0cff646d45f736",
  "06ac407f9ad34c",
  "006d74c2734293",
  "17917f84cb57ed",
  "1f27e027fccc54",
  "137a64e546aa6d",
  "16bc549d38c386",
  "19fbb718cfd182",
  "1dedb68c359f56",
  "1db82b6e6721dc",
  "1d3b7d749fa3c8",
  "0d27cacd92bb09",
  "087554bef14b0f",
  "1d41dd08562455",
  "1861d933707372",
  "194d24a718027c",
  "1bdf136a790733",
  "1edde07cf0e489",
  "0e4616877a7ccf",
  "05cfaf18ca5fc3",
  "1fb4c20b508ecc",
  "0212c90d80a86f",
  "00ce3fbac0757e",
  "0cdbd2f76beb7f",
  "154ef9f03fb6f1",
  "1cba3a0b4e0961",
  "17875d0d1fe33f",
  "0f4045210a8aa5",
  "1d33b268e52643",
  "0da3b920cbd847",
  "1e353e2f0f31ef",
  "14ac8ffbfe1a53",
  "17a80f5a364137",
  "0d47c53ca3ca50",
  "19854cfe13548b",
  "00a86407bcd96d",
  "1c5270431199b8",
  "0126b1cdab87ff",
  "0595f0c578d207",
  "0d6ed8705ea26a",
  "0cb7b94d327708",
  "1d8cff976eb021",
  "0d0227516ac9d3",
  "10026984e3ae75",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "10e660a3b8f458",
  "0a801f7d7cd79e",
  "1cfe26016bd3b0",
  "09e71f35489251",
  "0c9a9068787403",
  "0dc68aebf7d358",
  "0b4da3368b7b71",
  "0c68284c6b45a6",
  "184e930ca2ecff",
  "0a22a54545254f",
  "010b3d71f8b8d5",
  "13c7b3e388124e",
  "1f6048530f84d3",
  "1aa3b6b49029aa",
  "0828da725d80c0",
  "0e3d3b4dc3e9d5",
  "0b20675faf4708",
  "06fbc8195b77b2",
  "105e8aeca25c68",
  "006692b8c862c2",
  "11fdb0166602d0",
  "058348e1e2b656",
  "1a242334aa4395",
  "0e0a71d791a8d1",
  "0f3b4abdc78bd5",
  "0d8fe5b228d7bd",
  "11d8a608d1f6fa",
  "06897c3d33d8b6",
  "006569cfef6697",
  "174cf657e4621e",
  "0ed5b8c67ae125",
  "02499adfcce225",
  "1ae09a6b8cf5a6",
  "0b412f00e6e6b6",
  "0d09edad0badf3",
  "0415e69ff06a9b",
  "04f6d0256d5eb2",
  "0f3856b3b5e833",
  "0e71d324da8cd9",
  "092daf79ace9af",
  "1f9f3046f23ad1",
  "16ff2affcb8119",
  "0f49f1a5f60139",
  "0dd84b11946fb0",
  "15ff390f03db00",
  "18888e93099df5",
  "0f332aa1a69707",
  "0879d75c512d69",
  "0763ed8d137aa9",
  "0dbbd33af54699",
  "01f0649a225e45",
  "1005f889bd1a79",
  "04e2f7236e0cc8",
  "0848f994b7de84",
  "0a1763193abf12",
  "1c060ba00e8e91",
  "1fb610ba8d9a03",
  "1468c53bda3975",
  "0ca727464ee835",
  "0379ca22400a7a",
  "12912e4868dc9a",
  "10b3e9434bb7be",
  "023dc3d07ba65a",
  "0b8a74bd8ec768",
  "0295c54e394158",
  "1ba7c2928f5bdb",
  "1473ad7772f806",
  "04e59ceba4c2f0",
  "094f446ddad616",
  "131e2540eeed0f",
  "19e926c754f849",
  "10d4cb3fa8782f",
  "14fd7d1dd3874a",
  "0f15f673ff27a7",
  "0445dbe9f39ea5",
  "1cae8b91a24c2f",
  "0859823be74a74",
  "0e4d1f9d95724e",
  "0491416d32a719",
  "0426121f7dc23a",
  "1821c19e181024",
  "035315cadc71cc",
  "0c9aef66b5525d",
  "0e6e87b70907e8",
  "10290328b58569",
  "04ab9edf353f28",
  "1c26225aa5b60c",
  "137a82911af06d",
  "0222f251084616",
  "01ffddbe055f70",
  "005e47d64d2c2d",
  "034cae67f73eca",
  "0f27c4e6bdcf37",
  "1829427f4bb4b3",
  "064938f19d5201",
  "12984971d6cbce",
  "0e138091d7e443",
  "081f55a3b37c9c",
  "07d84ee2fa4a04",
  "108377df54a7c1",
  "166549f20b62d9",
  "17cca5b93f4211",
  "130e927e6f8adb",
  "0f6ec721b1f065",
  "1ec86ee7d1a04f",
  "1bd67a7511226b",
  "0616736f1946d3",
  "0b0c8ea0f7aec1",
  "13c7c3f1aac9bd",
  "01271c344fd64e",
  "18246cfbddcbca",
  "0a2b902d73dd74",
  "0c958591334e11",
  "08538a7abf7d9b",
  "002edc89b44021",
  "045d0abe61ae82",
  "0c7bbc720fb376",
  "168cbfc531ac58",
  "08db037215ac4f",
  "05f2a7d8e6b6a6",
  "07c73f21440df0",
  "0c529bf7459bb7",
  "00240a3dea2744",
  "1c9f4dfedaf767",
  "0386ab58a43709",
  "145f777e6cc45e",
  "1bb99049bbb59c",
  "0463ded350f21d",
  "1e027c28a6cdcb",
  "1fdcb931f733b6",
  "0e3fcf2fe878f5",
  "18787358f8b195",
  "1d35d1bba6fd87",
  "0b2e1820d389b9",
  "035b641a56e5af",
  "196f06e933ad95",
  "070d9535dd8932",
  "142ac0e43da84e",
  "05d326063517a9",
  "16d5e3ee31b8d7",
  "0ee4ee04dbc1a6",
  "1562c73ca0075c",
  "071cba54977c49",
  "19a1164d1395f5",
  "0c44ca8e648357",
  "01e453553d9633",
  "1e9db321bf4431",
  "1bce3e8384bbfc",
  "15f73142eb4d67",
  "0b00c6f785a73d",
  "105e7c54c9c695",
  "089f68f79ec4b9",
  "1780305d3eda4d",
  "0aae3a6e8e7fe0",
  "0d673fd3b3aebd",
  "03f3ac7f72a004",
  "125c1042505c69",
  "1ff935df3cbfe5",
  "1bed3977b9dd4e",
  "07edf51ddd53a1",
  "02ea5cf9f82c21",
  "0bbdfffd7d88f6",
  "00d1a0dc7f8371",
  "0fc9bcd0e14563",
  "1dedb68c359f56",
  "1ba642636cfe38",
  "1d3b7d749fa3c8",
  "13f5c20fa70bdc",
  "13660758b831e4",
  "1545ac5c8d3a2c",
  "1861d933707372",
  "1715eb4d85b477",
  "09c64f02191d24",
  "0a1a44a3505110",
  "077283a5f94068",
  "000220bbbdb2a7",
  "06efbe85f89576",
  "0fcdb023fd0244",
  "00ce3fbac0757e",
  "0ac9ac3ccf1ee6",
  "0014d75b68bfea",
  "1cba3a0b4e0961",
  "17875d0d1fe33f",
  "1f02706b4f946b",
  "17431b39452a53",
  "0f8d363ab7447b",
  "04b7089a2887f5",
  "07f98c26cdf518",
  "02c0170e61cc3a",
  "0ac0f5b98b91d0",
  "1a3907d86836f8",
  "13eb38b2eb52c4",
  "0f36c4fb6ea684",
  "18c4c52de35cda",
  "002843e4993937",
  "0d6ed8705ea26a",
  "1913702d22cad1",
  "1165fdb091e070",
  "12a0a1eada3f5d",
  "086318cc963747",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "08943c8b8ce9f9",
  "0a801f7d7cd79e",
  "1a00416a2a718f",
  "088a3a65fd4b52",
  "0925c4b7dc6019",
  "04f48a9fbc595e",
  "0b4da3368b7b71",
  "1916fb8cd384a2",
  "184e930ca2ecff",
  "0a22a54545254f",
  "010b3d71f8b8d5",
  "12b9bde2cb1194",
  "1ee9e4bba3eed5",
  "0b7b3e5b222c17",
  "0205fdb1482086",
  "0e7043a16e7e7b",
  "0b20675faf4708",
  "0c206f98f57e77",
  "0cb222972dc9f2",
  "1c8ab78a1d4f79",
  "0fe6abbd86e23d",
  "058348e1e2b656",
  "097435cdd9bd48",
  "0e0a71d791a8d1",
  "05248973cef481",
  "1e611a4de31e9c",
  "09755f3e17454c",
  "0ae3779d3e36ae",
  "1f910b406b6674",
  "174cf657e4621e",
  "17c960431a475b",
  "067f21430f4a32",
  "191612c2b5ad7a",
  "0eee42380b45a4",
  "10f0defaa0552e",
  "0415e69ff06a9b",
  "1f5cc7c3f6a11d",
  "0f3856b3b5e833",
  "19810224bb7617",
  "122f731f9b0c43",
  "09106276d528c5",
  "1403021eec4b1e",
  "1f6293595f1a39",
  "0ec618ee803832",
  "15ff390f03db00",
  "00373309af64fc",
  "08c4d549f5a215",
  "0879d75c512d69",
  "0a79dd82ab2067",
  "0dbbd33af54699",
  "0313b787d54a0b",
  "1005f889bd1a79",
  "1897fa91ae085e",
  "0848f994b7de84",
  "005d3348ee60b2",
  "12534241d288dd",
  "1e321473c6237d",
  "1468c53bda3975",
  "0e7891ae51c6ae",
  "0379ca22400a7a",
  "1d41d2d3c8f8fa",
  "002c96be6954d3",
  "0006b8b57dfa75",
  "0b8a74bd8ec768",
  "18db152647ba78",
  "1ba7c2928f5bdb",
  "0c18c88d824053",
  "1f9b5215ca12df",
  "094f446ddad616",
  "0f2cf133397f1a",
  "0e5ac6d6d91092",
  "1157e555dcbbb3",
  "1a7b2de569c8c6",
  "03e22c8e9f872d",
  "0874e7d92fe688",
  "0846dca8f85db5",
  "027b9adc4716f3",
  "0ccbe7a3b147d8",
  "0491416d32a719",
  "174de3e6b28469",
  "18d869a54c365f",
  "035315cadc71cc",
  "17172b28763643",
  "11846c80a8f544",
  "149523e9a660a2",
  "18d018dff249ca",
  "1664ffd8fd5d72",
  "0c00cde10dbfdb",
  "12f90e0ca0ea30",
  "0331d3a8b0db13",
  "00e4fff803ffd9",
  "034cae67f73eca",
  "0d90fa84d2b6c6",
  "1829427f4bb4b3",
  "064938f19d5201",
  "12984971d6cbce",
  "0e138091d7e443",
  "0c1872f2a7e86f",
  "07d84ee2fa4a04",
  "0ceef63f391459",
  "04c51f68e7414d",
  "171df7e8fbcce2",
  "130e927e6f8adb",
  "0f6ec721b1f065",
  "03cccfb4b3c600",
  "1bd67a7511226b",
  "02333c251da559",
  "0724f54e124525",
  "1f0b59530e2a28",
  "01271c344fd64e",
  "18246cfbddcbca",
  "0a2b902d73dd74",
  "0c958591334e11",
  "0b0f5c748a69d5",
  "001c65323dc99c",
  "1961de3476c5e3",
  "0f762c50544016",
  "168cbfc531ac58",
  "1fbf783a21c323",
  "164f343454f99a",
  "07c73f21440df0",
  "003badfba971e6",
  "00240a3dea2744",
  "18af1c74eb4ff5",
  "1eb99fe373229b",
  "14abd9ecfdcc0f",
  "04ca3b471d10b2",
  "063512f1dd4f92",
  "1e027c28a6cdcb",
  "1fdcb931f733b6",
  "0a4d635665511e",
  "1d1eceeb12e5c8",
  "1decdfe9a708b9",
  "0b2e1820d389b9",
  "1b491999682887",
  "196f06e933ad95",
  "06e1492ed6b3fc",
  "132f5df2ccc46d",
  "05d326063517a9",
  "16d5e3ee31b8d7",
  "0ee4ee04dbc1a6",
  "0562d08e9d6e3e",
  "071cba54977c49",
  "19a1164d1395f5",
  "08b4a72c892e33",
  "115d05ce78426a",
  "1e9db321bf4431",
  "088b063c01ec18",
  "0173cd2313a5d3",
  "0c17d63ec14e34",
  "1877c6b8c5b32f",
  "0f8f8a96cb3c84",
  "1ca7a5a2c8b41e",
  "045c65874a6890",
  "0d673fd3b3aebd",
  "051001066193b1",
  "0cff646d45f736",
  "1ff935df3cbfe5",
  "1bed3977b9dd4e",
  "07edf51ddd53a1",
  "1f27e027fccc54",
  "137a64e546aa6d",
  "00d1a0dc7f8371",
  "19fbb718cfd182",
  "1dedb68c359f56",
  "1db82b6e6721dc",
  "1d3b7d749fa3c8",
  "0d27cacd92bb09",
  "087554bef14b0f",
  "1d41dd08562455",
  "1861d933707372",
  "194d24a718027c",
  "1bdf136a790733",
  "1edde07cf0e489",
  "0e4616877a7ccf",
  "05cfaf18ca5fc3",
  "1fb4c20b508ecc",
  "0fcdb023fd0244",
  "00ce3fbac0757e",
  "0ac9ac3ccf1ee6",
  "154ef9f03fb6f1",
  "1cba3a0b4e0961",
  "17875d0d1fe33f",
  "0f4045210a8aa5",
  "1d33b268e52643",
  "0f8d363ab7447b",
  "1e353e2f0f31ef",
  "07f98c26cdf518",
  "17a80f5a364137",
  "0d47c53ca3ca50",
  "19854cfe13548b",
  "00a86407bcd96d",
  "1c5270431199b8",
  "0126b1cdab87ff",
  "0595f0c578d207",
  "0d6ed8705ea26a",
  "0cb7b94d327708",
  "1d8cff976eb021",
  "0d0227516ac9d3",
  "10026984e3ae75",
]
`;
